--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".dotfiles-personal"]
+[submodule "personal"]
 	path = personal
 	url = git@github.com:riquenandez/.dotfiles-personal.git
