feat: nvim config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,7 @@ setw -g mouse on
 set-window-option -g mode-keys vi
 
 bind r source-file ~/.tmux.conf
+set-option -g default-shell /bin/zsh
 
 
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -22,7 +23,7 @@ bind -r l select-pane -R
 # bind -r D neww -c "#{pane_current_path}" "[[ -e TODO.md ]] && nvim TODO.md || nvim ~/.dotfiles/personal/todo.md"
 
 # forget the find window.  That is for chumps
-bind-key -r f run-shell "tmux neww ~/bin/tmux-sessionizer"
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 
 # bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/work/hpack"
 #bind-key -r N run-shell "~/.local/bin/tmux-sessionizer ~/personal/harpoon"
