--- a/yabai/.yabairc
+++ b/yabai/.yabairc
@@ -22,3 +22,6 @@ yabai -m config window_shadow float
 yabai -m config window_opacity on
 yabai -m config active_window_opacity 1.0
 yabai -m config normal_window_opacity 0.9
+
+# yabai -m rule --add app!="^(Terminal|Finder|Notes)$" manage=off
+yabai -m rule --add manage=off app="^(Termial|Finder|Notes|zoom.us|Microsoft Outlook)$"
